XX/XX/2010 - Mythbox SVN XXXX
=============================
 - update  : Protocol version 56 support addec - MythTV 0.23
 - new     : PageUp/PageDn (Channel Up/Channel Down on the remote) in the Recording Details screen now navigates
             to the next or previous recording
 - faster  : UI responsiveness tweaked to run well on an Acer Aspire Revo (1.6Ghz Atom + NVidia ION GPU) 
 - rewrite : TV Guide screen is back 
             PgUp/PgDown keys now scroll up/down an entire page
             Clicking on a currently playing program starts Live TV
 - new     : Program cells in the TV guide have an HD overlay indicator when appropriate
 - update  : Higher resolution thumbnails in Recording Details screen
 - new     : Non-idle tuners bubble to the top of the tuners list when there are more than two tuners
 - faster  : After deleting a recording from the Recording Details window the Recordings window would take quite a 
             while to update for a large number of recordings
 - new     : Automatic forwarding through a commercial break when you land in the middle of the commercial break
 - fixed   : Requesting a recording's thumbnail from a slave backend didn't work              
 - fixed   : UI tweaks when the active skin is confluence (radio button color, active selection in coverflow, etc)
 - fixed   : Unnecessary refresh of the program listings on the Watch TV screen after stopping live tv.
 - new     : Added keybindings and remote control buttons section to the README
 - updated : Replaced autoexpire flag with original air date on the Recording Details screen
 - fixed   : XBMC crashes occasionally when exiting from MythBox
 - new     : Added keybindings section to README
 - fixed   : Clicking on Edit Schedule in the Recording Details screen when the schedule no longer exists how shows an error message
 - fixed   : Attempting to watch live tv on tuner which is already recording on a slave backend no longer fails silently